ajout des modifications

--- a/CRUD/Views/Home/Index.cshtml
+++ b/CRUD/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
  @using Services
  @using ServicesContrat.DTO
 @model List<CountryPersonne>
-<h1>Joueurs</h1>
+<h1 class="map">Joueurs</h1>
 <form method="get" action="/">
 <div id="form" >
         <div id="select">
