--- a/CRUD/wwwroot/styles/style.css
+++ b/CRUD/wwwroot/styles/style.css
@@ -240,3 +240,6 @@ input[type="file"] {
     display: block; /* Affiche l'élément sur une nouvelle ligne */
     margin-top: 10px; /* Espacement entre l'élément et le bouton */
 }
+.map{
+    font-size:15px;
+}
