--- a/CRUD/Views/Home/Index.cshtml
+++ b/CRUD/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
         <button class="search">Search</button>
     </div>
 </div>
+<b> COURAGE</b>
 <table class="htmlDoc">
     <thead>
             <tr>
